# omero-screen

./: .gitignore  .jupytext.toml  .localenv  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.xml  docker-compose.test.yml  docker-compose.yml  new-plotting-setup.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
scripts/: README.md  download_sample_data.py  load_plates.sh  manage_test_server.sh
src/data/: Style_01.mplstyle
src/omero_screen/: __init__.py  aggregator.py  cellcycle_analysis.py  config.py  flatfield_corr.py  gallery_figure.py  general_functions.py  image_analysis.py  image_analysis_nucleus.py  image_classifier.py  logging_config.py  loops.py  metadata_parser.py  plate_aggregation.py  plate_dataset.py  plate_metadata.py  quality_control.py  torch.py
tests/: conftest.py
tests/e2e/omero_screen/: test_metadata.py
tests/e2e/omero_utils/: conftest.py  test_attachments.py  test_e2e_omero_connect.py  test_map_anns.py  test_omero_connect.py
tests/e2e_pytest/: test_excel.py
tests/e2e_tests/: e2e_connection.py  e2e_excel.py  e2e_flatfield_corr.py  e2e_mip.py  e2e_omero_screen.py  e2e_pixelsize.py  e2e_plate_dataset.py  e2e_run.py  e2e_setup.py  excel_file_handling.py  meta_data_integration.py  test_e2e_metadata.py
tests/e2e_tests/e2e_cellview/: test_export_plate.py
tests/e2e_tests/e2e_pytest/: test_excel.py
tests/unit/omero_screen/: test_logging_config.py  test_set_env_vars.py
tests/unit/omero_utils/: test_omero_connect.py
tests/unit_tests/: conftest.py
tests/unit_tests/cellview_tests/: conftest.py  test_ci.py  test_db.py  test_enhanced_experiment_manager.py  test_enhanced_import_functions.py  test_enhanced_project_manager.py  test_experiments.py  test_omero_import_state.py  test_projects.py  test_repeats.py  test_state.py
tests/unit_tests/cellview_tests/testdata/: test_df_564.csv  test_df_std_missing_col.csv  test_df_std_rpt1.csv  test_df_std_rpt2.csv  test_final_data_cc.csv
tests/unit_tests/config_tests/: test_logging_config.py  test_set_env_vars.py
tests/unit_tests/omero_screen_plots_tests/: README.md  conftest.py  test_cellcycle_stacked.py  test_cellcycleplot.py  test_classificationplot.py  test_combplot.py  test_combplot_api.py  test_countplot.py  test_feature_norm_plot.py  test_featureplot.py  test_featurplot.py  test_histogramplot.py  test_new_plots.py  test_plot_classes.py  test_scatterplot.py
tests/unit_tests/omero_screen_tests/: conftest.py  test_aggregator.py  test_metadata.py  test_plate.py
tests/unit_tests/omero_utils_tests/: conftest.py  test_attachments.py  test_map_anns.py  test_omero_connect.py
